[package]
name = "cache-master"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lru = "0.8.1"
moka = "0.9.5"
async-trait = "0.1.58"
tokio = {version="1.21.2", features=["sync", "macros", "rt-multi-thread"]}
[dev-dependencies]
buildstructor = { path="../buildstructor" }
